# tranzit

./: .prettierrc  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  privacy.html  sample.env  svelte.config.js
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: bakup  tranzit-android.yml  tranzit-linux-deb.yml  tranzit-linux.yml  tranzit-mac-universal.yml  tranzit-windows-microsoft-store.yml  tranzit-windows.yml
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs  mdns.rs  sysinfo.rs  util.rs  util_android.rs
src-tauri/src/http_requests/: mod.rs
src-tauri/src/http_server/: mod.rs  utils.rs  utils_android.rs
src-tauri/src/tcp_heartbeat/: mod.rs
src-tauri/windows/: hooks.nsh
src/components/device-list/: DeviceList.svelte  style.scss
src/components/generic-popup/: GenericPopup.svelte
src/components/transfer-progress-popup/: TransferProgressPopup.svelte
src/components/transfer-request-popup/: TransferRequestPopup.svelte
src/lib/components/: common.scss
src/lib/components/device-list/: DeviceList.svelte  style.scss
src/lib/components/generic-popup/: GenericPopup.svelte
src/lib/components/popup/: Popup.svelte  style.scss
src/lib/components/transfer-progress-popup/: TransferProgressPopup.svelte  style.scss
src/lib/components/transfer-request-popup/: TransferRequestPopup.svelte  style.scss
src/lib/types/: deviceInfo.ts  sysInfo.ts
src/lib/utils/: sfx.ts  utils.ts
src/routes/: +layout.svelte
src/routes/(App)/: +page.svelte  style.scss
src/routes/(App)/settings/: +page.svelte  style.scss
src/state/: state.svelte.ts
static/css/: index.css
static/css/colorschemes/: gruvbox.css  solarized.css
