[package]
name = "tranzit"
version = "0.1.0"
description = "Cross platform file sharing app over your local network"
authors = ["kr5hn4"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tranzit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libmdns = "0.9.1"
mdns = "3.0.0"
futures-util = "0.3.31"
async-std = "1.13.1"
once_cell = "1.21.3"
mdns-sd = "0.13.11"
tokio = { version = "1.46.1", features = ["full"] }
warp = { version = "0.3.7", features = ["tls"] }
uuid = { version = "1.17.0", features = ["v4"] }
sysinfo = "0.36.0"
dirs = "6.0.0"
sanitize-filename = "0.6.0"
bytes = "1.10.1"
tauri-plugin-os = "2"
tauri-plugin-android-fs = "9.5.0"
if-addrs = "0.14.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-store = "2"
dirs-next = "2.0.0"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.22", default-features = false, features = ["multipart", "stream", "rustls-tls", "json"] }
rcgen = "0.14.3"
tokio-stream = "0.1.17"
image = { version = "0.25.6", features = ["jpeg", "png", "gif", "bmp", "ico", "tiff", "webp"] }
base64 = "0.22.1"
mime_guess = "2.0.5"
infer = "0.19.0"
log = "0.4.27"
url = "2.5.4"
tauri-plugin-fs = "2"
tokio-util = { version = "0.7.16", features = ["compat"] }
pin-project-lite = "0.2.16"
tauri-plugin-prevent-default = "3.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
